@@ -1,3 +1,8 @@
+2004-03-22  Bruno Haible  <bruno@clisp.org>
+
+	* charstrg.d (test_2_stringsym_limits): Move the test for nil-vector to
+	the right place.
+
 2004-02-29  Bruno Haible  <bruno@clisp.org>
 
 	* format.lisp: In error messages, talk about "format directives", not
